--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGO_URI = mongodb+srv://talhabinay:talha126@cluster0.ihtumml.mongodb.net/
-JWT_SECRET = Mein Nai Bataon Ga
+JWT_SECRET = Mein_Nai_Bataon_Ga
