--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "exceljs": "^4.4.0",
